--- a/app/views/schools/_form.html.haml
+++ b/app/views/schools/_form.html.haml
@@ -1,13 +1,9 @@
-= form_for @school do |f|
-  - if @school.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@school.errors.count, "error")} prohibited this school from being saved:"
-      %ul
-        - @school.errors.full_messages.each do |msg|
-          %li= msg
+= simple_form_for @school, html: { class: 'custom' } do |form|
+  = form.error_notification
 
-  .field
-    = f.label :name
-    = f.text_field :name
-  .actions
-    = f.submit 'Save'
+  .form-inputs
+    = form.input :name
+    = form.association :teachers, collection: Teacher.all
+
+  .form-actions
+    = form.button :submit
